# gdml-to-mesh

./: .gitignore  README.md  pyproject.toml
env/: environment.yml
gdml/: scarf_pen.gdml
gdml_to_mesh/: __init__.py  _build.py  _config.py  cli.py
geant4_extract/: CMakeLists.txt  extract_mesh.cc  extract_placements.cc
geant4_extract/include/: InterfaceExtractor.hh
geant4_extract/src/: InterfaceExtractor.cc  MaterialExporter.cc  SurfaceExporter.cc  SurfaceMesher.cc
meshes/: export_npz.py  view_npz.py  view_scene.py
